k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    app: notification-service
spec:
  type: ClusterIP
  selector:
    app: notification-service
  ports:
    - name: api
      port: 5000
      protocol: TCP
    - name: metrics
      port: 5001
      protocol: TCP
